[gd_scene load_steps=18 format=2]

[ext_resource path="res://Pic/123.bg.png" type="Texture" id=1]
[ext_resource path="res://fonts/font1.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/1.3.1.gd" type="Script" id=4]
[ext_resource path="res://fonts/font2.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/style重新註冊.tres" type="StyleBox" id=7]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.737255, 0.870588, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.952941, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=16]
size = 25
outline_size = 1
outline_color = Color( 1, 1, 1, 0.482353 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=12]
size = 22
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=18]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 0.443137 )
use_filter = true
extra_spacing_top = -5
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 1
outline_color = Color( 1, 1, 1, 0.443137 )
use_filter = true
extra_spacing_top = -5
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=14]
size = 45
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0.329412 )

[node name="Node2D2" type="Node2D"]
script = ExtResource( 4 )

[node name="BackgroundPicture" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="BackgroundControl" type="Panel" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.0
margin_top = -371.0
margin_right = 343.0
margin_bottom = 329.0
custom_styles/panel = SubResource( 1 )

[node name="next" type="Button" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -169.0
margin_right = 110.0
margin_bottom = -128.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "下一步"

[node name="MailLineEdit" type="LineEdit" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 40.0
margin_right = 199.0
margin_bottom = 93.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 17 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_alpha = 1.0

[node name="輸入信箱" type="Label" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -15.0
margin_right = 81.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "請輸入信箱："

[node name="紅字" type="Label" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = 106.0
margin_right = 71.0
margin_bottom = 129.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "系統將會寄送驗證碼至信箱"

[node name="step1" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 52.0
margin_top = 222.0
margin_right = 158.0
margin_bottom = 276.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "step 1"

[node name="dot1" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = -156.0
margin_top = 325.0
margin_right = -108.0
margin_bottom = 339.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -688, 173 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "............"
align = 1

[node name="step2" type="Label" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -128.0
margin_right = 53.0
margin_bottom = -74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "step 2"

[node name="dot2" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 85.0
margin_top = 325.0
margin_right = 133.0
margin_bottom = 339.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -688, 173 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "............"
align = 1

[node name="step3" type="Label" parent="BackgroundPicture/BackgroundControl"]
margin_left = 528.0
margin_top = 222.0
margin_right = 634.0
margin_bottom = 276.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "step 3"

[node name="忘記密碼" type="Label" parent="BackgroundPicture/BackgroundControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -343.0
margin_top = 69.0
margin_right = 343.0
margin_bottom = 155.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "忘記密碼？"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackgroundPicture/BackgroundControl/next" to="." method="_on_next_pressed"]
